--- a/res/layout/page_topic_news.xml
+++ b/res/layout/page_topic_news.xml
@@ -90,6 +90,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="30dp"
                         android:layout_marginTop="10dp"
+                        android:orientation="vertical" 
                         android:gravity="right" >
                     </LinearLayout>
 
