--- a/res/layout/list_items.xml
+++ b/res/layout/list_items.xml
@@ -3,10 +3,11 @@
     android:id="@+id/RelativeLayout01"  
     android:layout_width="fill_parent"  
     xmlns:android="http://schemas.android.com/apk/res/android"  
-    android:layout_height="wrap_content"  
+    android:layout_height="60dip"  
     android:paddingBottom="4dip"  
     android:paddingLeft="12dip" 
     android:paddingRight="12dip"
+    android:layout_gravity="center" 
     android:background="@drawable/bg_header_top"> 
     
 <ImageView  
@@ -21,11 +22,12 @@
 <TextView  
     android:text="TextView01"  
     android:layout_height="wrap_content"  
-    android:layout_marginTop="30px"
+    android:layout_marginTop="3dip"
     android:textSize="20dip"  
     android:paddingLeft="12dip"
     android:textColor="#000000"
     android:layout_width="fill_parent"  
+    android:gravity="center_vertical|left"
     android:id="@+id/ItemTitle" 
     android:layout_toRightOf="@+id/ItemImage"
     /> 
