--- a/res/layout/page_topic_news.xml
+++ b/res/layout/page_topic_news.xml
@@ -110,7 +110,7 @@
                     android:orientation="vertical" >
                     
                     <ListView android:layout_width="fill_parent"
-				          android:layout_height="wrap_content"
+				          android:layout_height="120dip"
 				          android:id="@+id/ListView01"
 						  android:dividerHeight="3dip"
 						  android:cacheColorHint="#00000000"
