--- a/res/layout/radio_guest.xml
+++ b/res/layout/radio_guest.xml
@@ -4,14 +4,13 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 	
-	<ListView  
-        android:id="@+id/guest_list"  
-        android:layout_width="fill_parent"  
-        android:layout_height="wrap_content"  
-        android:divider="#b5b5b5"  
-        android:dividerHeight="1dp"  
-        android:listSelector="#00000000"
-      />  
+	    <ListView
+        android:id="@+id/guest_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:divider="#b5b5b5"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector" />
       
       <!-- 
 	  	android:listSelector="@drawable/list_selector" 
